로그인 레이아웃 완성 폰트의 경우 assets의 xml파일을 사용법을 도저히 못찾겠어서 styles.xml(v21)을 삭제하고 font-family로 구현, button 벡터 이미지의 경우 디자이너분하고 얘기해서 radius 8dp로 새로 작성하였다.

--- a/app/src/main/res/drawable/ic_button.xml
+++ b/app/src/main/res/drawable/ic_button.xml
@@ -1,9 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="134dp"
-    android:height="32dp"
-    android:viewportWidth="134"
-    android:viewportHeight="32">
-  <path
-      android:pathData="M8,0L126,0A8,8 0,0 1,134 8L134,24A8,8 0,0 1,126 32L8,32A8,8 0,0 1,0 24L0,8A8,8 0,0 1,8 0z"
-      android:fillColor="#684bff"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:padding="10dp"
+    android:shape="rectangle" >
+  <solid android:color="@color/playviolet" />
+  <corners
+      android:bottomLeftRadius="8dp"
+      android:bottomRightRadius="8dp"
+      android:topLeftRadius="8dp"
+      android:topRightRadius="8dp" />
+</shape>
