--- a/app/src/main/res/layout/fragment_group_list.xml
+++ b/app/src/main/res/layout/fragment_group_list.xml
@@ -33,6 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
+        android:fontFamily="@font/notosanskr_regular"
+        android:includeFontPadding="false"
         android:text="서울 송파"
         android:textColor="@color/sub_black"
         android:textSize="16sp"
@@ -78,7 +80,9 @@
                     android:layout_marginRight="@dimen/spacing_xs"
                     android:text="스터디"
                     android:textColor="@color/sub_black"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"/>
 
                 <Button
                     android:id="@+id/filter_btn"
