--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginRight="@dimen/spacing_xxs"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="112dp"
         android:layout_marginBottom="@dimen/spacing_m"
         app:cardBackgroundColor="@color/white">
 
@@ -26,115 +25,113 @@
                 android:layout_marginRight="@dimen/spacing_m"
                 tools:srcCompat="@tools:sample/avatars" />
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="match_parent">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/location_tV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:background="@drawable/grouplist_tv_shape"
+                    android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"
+                    android:paddingLeft="@dimen/spacing_xs"
+                    android:paddingTop="2dp"
+                    android:paddingRight="@dimen/spacing_xs"
+                    android:paddingBottom="2dp"
+                    android:text="서울 송파"
+                    android:textColor="@color/playviolet"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/location_tV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/grouplist_tv_shape"
-                        android:paddingLeft="@dimen/spacing_xs"
-                        android:paddingTop="2dp"
-                        android:paddingRight="@dimen/spacing_xs"
-                        android:paddingBottom="2dp"
-                        android:text="서울 송파"
-                        android:textColor="@color/playviolet"
-                        android:textSize="12sp"
-                        android:fontFamily="@font/notosanskr_regular"
-                        android:includeFontPadding="false"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/category_tV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/spacing_xxs"
+                    android:layout_marginTop="2dp"
+                    android:background="@drawable/grouplist_tv_shape"
+                    android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"
+                    android:paddingLeft="@dimen/spacing_xs"
+                    android:paddingTop="2dp"
+                    android:paddingRight="@dimen/spacing_xs"
+                    android:paddingBottom="2dp"
+                    android:text="스터디"
+                    android:textColor="@color/playviolet"
+                    android:textSize="12sp"
+                    app:layout_constraintStart_toEndOf="@+id/location_tV"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/category_tV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/spacing_xxs"
-                        android:background="@drawable/grouplist_tv_shape"
-                        android:paddingLeft="@dimen/spacing_xs"
-                        android:paddingTop="2dp"
-                        android:paddingRight="@dimen/spacing_xs"
-                        android:paddingBottom="2dp"
-                        android:text="스터디"
-                        android:textColor="@color/playviolet"
-                        android:textSize="12sp"
-                        android:fontFamily="@font/notosanskr_regular"
-                        android:includeFontPadding="false"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/location_tV"
-                        app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/curr_tV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"
+                    android:text="1"
+                    android:textColor="@color/playviolet"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/textView15"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/curr_tV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1"
-                        android:textColor="@color/playviolet"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/notosanskr_regular"
-                        android:includeFontPadding="false"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/textView15"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="1.0" />
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"
+                    android:text="/"
+                    android:textColor="@color/sub_gray"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toStartOf="@+id/total_tV"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textView15"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="/"
-                        android:textColor="@color/sub_gray"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/notosanskr_regular"
-                        android:includeFontPadding="false"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/total_tV"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/total_tV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="4"
-                        android:textColor="@color/sub_gray"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/notosanskr_regular"
-                        android:includeFontPadding="false"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/total_tV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"
+                    android:text="4"
+                    android:textColor="@color/sub_gray"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/subject_tV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_xxs"
-                    android:layout_marginBottom="@dimen/spacing_xs"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginBottom="28dp"
+                    android:fontFamily="@font/notosanskr_bold"
+                    android:includeFontPadding="false"
                     android:text="그룹 제목"
                     android:textColor="@color/main_black"
                     android:textSize="16sp"
-                    android:fontFamily="@font/notosanskr_bold"
-                    android:includeFontPadding="false"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/info_tV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"
                     android:text="그룹 소개"
                     android:textColor="@color/sub_black"
                     android:textSize="12sp"
-                    android:fontFamily="@font/notosanskr_regular"
-                    android:includeFontPadding="false"/>
-            </LinearLayout>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
