--- a/app/src/main/res/layout/activity_register1.xml
+++ b/app/src/main/res/layout/activity_register1.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="64dp"
         android:fontFamily="@font/notosanskr_bold"
         android:text="재학중인 학교를\n알려주세요."
+        android:includeFontPadding="false"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
