--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -7,16 +7,17 @@
     tools:context=".login.RegisterActivity2">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/spacing_m"
-        android:layout_marginTop="64dp"
-        android:fontFamily="@font/notosanskr_bold"
-        android:text="아래 내용에\n동의해주세요."
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:id="@+id/textView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/spacing_m"
+    android:layout_marginTop="64dp"
+    android:fontFamily="@font/notosanskr_bold"
+        android:includeFontPadding="false"
+    android:text="아래 내용에\n동의해주세요."
+    android:textSize="24sp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -25,6 +26,7 @@
         android:layout_marginLeft="@dimen/spacing_m"
         android:layout_marginTop="@dimen/spacing_xs"
         android:fontFamily="@font/notosanskr_regular"
+        android:includeFontPadding="false"
         android:textSize="12sp"
         android:textColor="@color/sub_gray"
         android:text="원활한 서비스 제공을 위해\n이용약간 동의 등의 내용에 동의해주세요"
