인증번호 요청 페이지 여태까지의 버튼 비활성화에서 setClickable을 setEnabled로 고침 Runnable을 통한 타이머 구현, handler를 통해 UI를 접근하지 않으면 오류가 나므로 주의해야 한다. 또한 새로운 쓰레드를 쓰는 이유는 백그라운드 쓰레드에서 계속 슬립을 주게 되면 그동안 멈춰있기 때문이다.

--- a/app/src/main/res/layout/activity_register1.xml
+++ b/app/src/main/res/layout/activity_register1.xml
@@ -67,7 +67,7 @@
         android:layout_marginRight="@dimen/spacing_m"
         android:layout_marginBottom="@dimen/spacing_m"
         android:background="@drawable/ic_disabled_button"
-        android:clickable="false"
+        android:enabled="false"
         android:fontFamily="@font/notosanskr_bold"
         android:text="다음"
         android:textColor="@color/sub_gray"
