--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -7,17 +7,17 @@
     tools:context=".login.RegisterActivity2">
 
     <TextView
-    android:id="@+id/textView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/spacing_m"
-    android:layout_marginTop="64dp"
-    android:fontFamily="@font/notosanskr_bold"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="64dp"
+        android:fontFamily="@font/notosanskr_bold"
         android:includeFontPadding="false"
-    android:text="아래 내용에\n동의해주세요."
-    android:textSize="24sp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        android:text="아래 내용에\n동의해주세요."
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacing_m"
         android:background="@drawable/ic_disabled_button"
-        android:clickable="false"
+        android:enabled="false"
         android:fontFamily="@font/notosanskr_bold"
         android:text="다음"
         android:textColor="@color/sub_gray"
