--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,8 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/playviolet</item>
+        <item name="colorControlNormal">@color/line</item>
         <!-- No Title Bar -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
