프로필 설정 화면2 리패키징 작업과 프로필 사진을 불러오는 작업을 수행하고 있다. 사진을 불러와서 이미지뷰에는 출력 가능하지만 center_crop이 적용되지 않아, 후에 Glide 라이브러리를 쓰는 등 방법을 갈구할 생각이다.

--- a/app/src/main/res/layout/activity_register4.xml
+++ b/app/src/main/res/layout/activity_register4.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login.RegisterActivity4">
+    tools:context=".register.RegisterActivity4">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/spacing_m"
-        android:layout_marginTop="64dp"
-        android:fontFamily="@font/notosanskr_bold"
-        android:includeFontPadding="false"
-        android:text="프로필을\n설정해주세요."
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:id="@+id/textView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/spacing_m"
+    android:layout_marginTop="64dp"
+    android:fontFamily="@font/notosanskr_bold"
+    android:includeFontPadding="false"
+    android:text="프로필을\n설정해주세요."
+    android:textSize="24sp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
