--- a/app/src/main/res/layout/activity_register4.xml
+++ b/app/src/main/res/layout/activity_register4.xml
@@ -7,17 +7,17 @@
     tools:context=".register.RegisterActivity4">
 
     <TextView
-    android:id="@+id/textView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/spacing_m"
-    android:layout_marginTop="64dp"
-    android:fontFamily="@font/notosanskr_bold"
-    android:includeFontPadding="false"
-    android:text="프로필을\n설정해주세요."
-    android:textSize="24sp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/spacing_m"
+        android:layout_marginTop="64dp"
+        android:fontFamily="@font/notosanskr_bold"
+        android:includeFontPadding="false"
+        android:text="프로필을\n설정해주세요."
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -89,7 +89,8 @@
         android:textColor="@color/sub_gray"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        style="?android:attr/borderlessButtonStyle" />
 
     <Button
         android:id="@+id/woman_btn"
@@ -102,7 +103,8 @@
         android:textColor="@color/sub_gray"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/man_btn"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        style="?android:attr/borderlessButtonStyle" />
 
     <EditText
         android:id="@+id/birth_year_edit"
@@ -152,7 +154,8 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        style="?android:attr/borderlessButtonStyle" />
 
     <ImageView
         android:id="@+id/imageView"
