--- a/app/src/main/res/layout/activity_register4.xml
+++ b/app/src/main/res/layout/activity_register4.xml
@@ -116,7 +116,7 @@
         android:fontFamily="@font/notosanskr_regular"
         android:hint="출생년도 (나이)"
         android:includeFontPadding="false"
-        android:inputType="text"
+        android:inputType="number"
         android:textColor="@color/sub_black"
         android:textColorHint="@color/gray"
         android:textSize="16sp"
