--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -20,21 +20,31 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/register_pic_btn"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_marginTop="@dimen/spacing_l"
-                android:background="@drawable/button_r8"
-                android:drawableTop="@drawable/camera_gray"
-                android:fontFamily="@font/notosanskr_bold"
-                android:paddingTop="31dp"
-                android:paddingBottom="31dp"
-                android:text="대표사진 등록하기"
-                android:textColor="@color/sub_gray"
-                android:textSize="12sp" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/spacing_l">
 
-            <RelativeLayout
+                <ImageView
+                    android:id="@+id/register_pic_iV"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp" />
+
+                <Button
+                    android:id="@+id/register_pic_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:background="@drawable/button_r8"
+                    android:drawableTop="@drawable/camera_gray"
+                    android:fontFamily="@font/notosanskr_bold"
+                    android:paddingTop="31dp"
+                    android:paddingBottom="31dp"
+                    android:text="대표사진 등록하기"
+                    android:textColor="@color/sub_gray"
+                    android:textSize="12sp" />
+            </FrameLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -49,21 +59,26 @@
                     android:inputType="textPersonName"
                     android:textColor="@color/sub_black"
                     android:textColorHint="@color/gray"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/check_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="34dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerInParent="true"
                     android:background="@drawable/ic_blue_lined_button"
                     android:fontFamily="@font/notosanskr_bold"
                     android:text="중복 확인"
                     android:textColor="@color/playviolet"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            </RelativeLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -89,12 +104,12 @@
                     android:ems="10"
                     android:fontFamily="@font/notosanskr_regular"
                     android:gravity="top"
-                    android:hint="소모임 목적, 참여 인원, 활동 지역, 소모임 원칙, 소모임 활동 내용 등 \n소모임을 잘 소개할 수 있게 작성해주세요!\n(최대 300자)"
+                    android:hint="소모임 목적, 참여 인원, 활동 지역, 소모임 원칙, 소모임 활동 내용 등 소모임을 잘 소개할 수 있게 작성해주세요!\n(최대 300자)"
                     android:includeFontPadding="false"
                     android:maxLength="300"
                     android:padding="@dimen/spacing_m"
                     android:textColor="@color/sub_black"
-                    android:textColorHint="@color/gray"
+                    android:textColorHint="@color/sub_gray"
                     android:textSize="12sp" />
 
                 <TextView
@@ -113,75 +128,95 @@
                     android:textSize="12sp" />
             </RelativeLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="wrap_content"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/notosanskr_bold"
-                    android:includeFontPadding="false"
-                    android:text="소모임 정원"
-                    android:textColor="@color/sub_black"
-                    android:textSize="12sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="83dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="77dp"
-                    android:layout_marginRight="77dp"
-                    android:fontFamily="@font/notosanskr_bold"
-                    android:includeFontPadding="false"
-                    android:text="소모임 활동 지역"
-                    android:textColor="@color/sub_black"
-                    android:textSize="12sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <Spinner
-                    android:id="@+id/member_spinner"
-                    android:layout_width="96dp"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="@dimen/spacing_xs"
-                    android:background="@drawable/button_r8"
-                    android:entries="@array/member"
-                    android:paddingLeft="@dimen/spacing_m"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView14" />
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
+                    android:layout_weight="1">
 
                     <TextView
-                        android:id="@+id/location_tV"
+                        android:id="@+id/textView14"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/spacing_xs"
+                        android:fontFamily="@font/notosanskr_bold"
+                        android:includeFontPadding="false"
+                        android:text="소모임 정원"
+                        android:textColor="@color/sub_black"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toTopOf="@+id/member_spinner"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <Spinner
+                        android:id="@+id/member_spinner"
+                        android:layout_width="96dp"
+                        android:layout_height="48dp"
+                        android:background="@drawable/button_r8"
+                        android:entries="@array/member"
+                        android:paddingLeft="@dimen/spacing_m"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginRight="@dimen/spacing_m"
+                        android:background="@drawable/down_large"
+                        app:layout_constraintBottom_toBottomOf="@+id/member_spinner"
+                        app:layout_constraintEnd_toEndOf="@+id/member_spinner"
+                        app:layout_constraintTop_toTopOf="@+id/member_spinner" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/spacing_xs"
+                        android:fontFamily="@font/notosanskr_bold"
+                        android:includeFontPadding="false"
+                        android:text="소모임 활동 지역"
+                        android:textColor="@color/sub_black"
+                        android:textSize="12sp"
+                        app:layout_constraintBottom_toTopOf="@+id/location_edit"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <EditText
+                        android:id="@+id/location_edit"
                         android:layout_width="160dp"
                         android:layout_height="48dp"
-                        android:layout_alignParentRight="true"
                         android:background="@drawable/button_r8"
                         android:fontFamily="@font/notosanskr_regular"
+                        android:hint="서울 OO구"
                         android:includeFontPadding="false"
+                        android:paddingLeft="@dimen/spacing_m"
                         android:textColor="@color/sub_black"
-                        android:textSize="20sp" />
+                        android:textColorHint="@color/sub_gray"
+                        android:textSize="20sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
 
                     <Button
                         android:id="@+id/search_btn"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_alignRight="@id/location_tV"
-                        android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/spacing_m"
-                        android:background="@drawable/search" />
-                </RelativeLayout>
+                        android:background="@drawable/search"
+                        app:layout_constraintBottom_toBottomOf="@+id/location_edit"
+                        app:layout_constraintEnd_toEndOf="@+id/location_edit"
+                        app:layout_constraintTop_toTopOf="@+id/location_edit" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -194,12 +229,28 @@
                 android:textColor="@color/sub_black"
                 android:textSize="12sp" />
 
-            <Spinner
-                android:id="@+id/category_spinner"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@drawable/button_r8"
-                android:entries="@array/category" />
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <Spinner
+                    android:id="@+id/category_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@drawable/button_r8"
+                    android:entries="@array/category"
+                    android:paddingLeft="@dimen/spacing_m" />
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignRight="@id/category_spinner"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/spacing_m"
+                    app:srcCompat="@drawable/down_large" />
+            </RelativeLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -212,18 +263,35 @@
                 android:textColor="@color/sub_black"
                 android:textSize="12sp" />
 
-            <Spinner
-                android:id="@+id/sub_category_spinner"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@drawable/button_r8"
-                android:entries="@array/category"/>
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <Spinner
+                    android:id="@+id/sub_category_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@drawable/button_r8"
+                    android:entries="@array/category"
+                    android:paddingLeft="@dimen/spacing_m" />
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignRight="@id/sub_category_spinner"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/spacing_m"
+                    app:srcCompat="@drawable/down_large" />
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/textView20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_m"
+                android:layout_marginBottom="13dp"
                 android:fontFamily="@font/notosanskr_regular"
                 android:gravity="center"
                 android:includeFontPadding="false"
@@ -245,7 +313,7 @@
             android:layout_height="52dp"
             android:layout_margin="@dimen/spacing_m"
             android:background="@drawable/ic_button"
-            android:fontFamily="@font/notosanskr_regular"
+            android:fontFamily="@font/notosanskr_bold"
             android:text="생성 신청"
             android:textColor="@color/white"
             android:textSize="18sp" />
