--- a/app/src/main/res/layout/fragment_group_list.xml
+++ b/app/src/main/res/layout/fragment_group_list.xml
@@ -56,7 +56,7 @@
 
             <LinearLayout
                 android:id="@+id/linearLayout3"
-                android:layout_width="100dp"
+                android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -78,11 +78,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/spacing_xs"
+                    android:fontFamily="@font/notosanskr_regular"
+                    android:includeFontPadding="false"
                     android:text="스터디"
                     android:textColor="@color/sub_black"
-                    android:textSize="12sp"
-                    android:fontFamily="@font/notosanskr_regular"
-                    android:includeFontPadding="false"/>
+                    android:textSize="12sp" />
 
                 <Button
                     android:id="@+id/filter_btn"
